refactor: convert perfect-skill-suggester to git submodule
Both marketplace plugins are now git submodules:
- perfect-skill-suggester -> https://github.com/Emasoft/perfect-skill-suggester
- claude-plugins-validation -> https://github.com/Emasoft/claude-plugins-validation

Updated marketplace.json to use git source type for both plugins.
This enables proper version tracking and independent plugin development.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "claude-plugins-validation"]
 	path = claude-plugins-validation
 	url = https://github.com/Emasoft/claude-plugins-validation.git
+[submodule "perfect-skill-suggester"]
+	path = perfect-skill-suggester
+	url = https://github.com/Emasoft/perfect-skill-suggester.git
