fix: use MARKETPLACE_PAT for branch protection bypass

--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MARKETPLACE_PAT }}
 
       - name: Show trigger info
         run: |
