--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,15 @@
 [submodule "perfect-skill-suggester"]
 	path = perfect-skill-suggester
 	url = https://github.com/Emasoft/perfect-skill-suggester.git
+[submodule "emasoft-architect-agent"]
+	path = emasoft-architect-agent
+	url = https://github.com/Emasoft/emasoft-architect-agent.git
+[submodule "emasoft-assistant-manager-agent"]
+	path = emasoft-assistant-manager-agent
+	url = https://github.com/Emasoft/emasoft-assistant-manager-agent.git
+[submodule "emasoft-integrator-agent"]
+	path = emasoft-integrator-agent
+	url = https://github.com/Emasoft/emasoft-integrator-agent.git
+[submodule "emasoft-orchestrator-agent"]
+	path = emasoft-orchestrator-agent
+	url = https://github.com/Emasoft/emasoft-orchestrator-agent.git
