feat(marketplace): Add emasoft-chief-of-staff plugin (ECOS)
- Added new plugin: emasoft-chief-of-staff v1.3.0
- Multi-agent lifecycle management
- Spawns, monitors, hibernates, and terminates Claude Code agents
- Integrates with AI Maestro for coordination

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "emasoft-orchestrator-agent"]
 	path = emasoft-orchestrator-agent
 	url = https://github.com/Emasoft/emasoft-orchestrator-agent.git
+[submodule "emasoft-chief-of-staff"]
+	path = emasoft-chief-of-staff
+	url = https://github.com/Emasoft/emasoft-chief-of-staff.git
