feat: add EPA plugin, update all submodules and versions
- Add emasoft-programmer-agent as new submodule (v1.0.0)
- Update all 7 existing submodules to latest commits
- Sync marketplace.json versions:
  - EAA: 1.1.0 → 1.1.1
  - EAMA: 1.1.0 → 1.1.1
  - EIA: 1.1.0 → 1.1.1
  - EOA: 1.1.0 → 1.2.0
  - ECOS: 1.3.0 → 1.3.1
  - EPA: new at 1.0.0
- Update README with all 8 plugins in versions table
- Add Emasoft Agent Ecosystem architecture section to README

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "emasoft-chief-of-staff"]
 	path = emasoft-chief-of-staff
 	url = https://github.com/Emasoft/emasoft-chief-of-staff.git
+[submodule "emasoft-programmer-agent"]
+	path = emasoft-programmer-agent
+	url = https://github.com/Emasoft/emasoft-programmer-agent.git
