ci: fix subshell variable scoping in marketplace validate.yml

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -63,8 +63,9 @@ jobs:
 
           FAILED=0
 
-          # Loop through each submodule
-          git submodule foreach --quiet 'echo $name' | while read plugin; do
+          # Loop through each submodule using process substitution
+          # (pipe subshell would lose FAILED variable changes)
+          while read plugin; do
             if [ -d "$plugin/.claude-plugin" ]; then
               echo ""
               echo "--- Validating: $plugin ---"
@@ -83,7 +84,7 @@ jobs:
             else
               echo "⚠ $plugin: No .claude-plugin directory (skipping)"
             fi
-          done
+          done < <(git submodule foreach --quiet 'echo $name')
 
           if [ "$FAILED" -ne 0 ]; then
             echo ""
