feat: add emasoft-chat-history plugin to marketplace
- Add emasoft-chat-history as 9th plugin submodule
- Update marketplace.json with plugin entry
- Fix CPV validator: scope private info scan to marketplace infra dirs
  only, preventing timeout on large workspaces

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "emasoft-programmer-agent"]
 	path = emasoft-programmer-agent
 	url = https://github.com/Emasoft/emasoft-programmer-agent.git
+[submodule "emasoft-chat-history"]
+	path = emasoft-chat-history
+	url = https://github.com/Emasoft/emasoft-chat-history.git
