--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -11,8 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: recursive
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -28,78 +26,55 @@ jobs:
         run: |
           echo "=== Validating Marketplace Structure ==="
 
-          # Check marketplace.json exists
+          # Check marketplace.json exists and is valid JSON
           if [ -f ".claude-plugin/marketplace.json" ]; then
-            echo "✓ marketplace.json exists"
-            python -c "import json; json.load(open('.claude-plugin/marketplace.json'))" && echo "✓ marketplace.json is valid JSON"
+            echo "OK marketplace.json exists"
+            python -c "import json; json.load(open('.claude-plugin/marketplace.json'))" && echo "OK marketplace.json is valid JSON"
           else
-            echo "✗ marketplace.json not found"
+            echo "FAIL marketplace.json not found"
             exit 1
           fi
 
-          # Check .gitmodules exists
-          if [ -f ".gitmodules" ]; then
-            echo "✓ .gitmodules exists"
-          else
-            echo "✗ .gitmodules not found"
-            exit 1
-          fi
-
-          # Check submodules are initialized
-          git submodule status
-
-          echo ""
-          echo "=== Marketplace structure is valid ==="
-
-      - name: Validate each plugin submodule
-        run: |
-          echo "=== Validating Plugin Submodules ==="
-
-          # Find the validator
-          VALIDATOR=""
-          if [ -f "claude-plugins-validation/scripts/validate_plugin.py" ]; then
-            VALIDATOR="claude-plugins-validation/scripts/validate_plugin.py"
-          fi
-
-          FAILED=0
-
-          # Loop through each submodule using process substitution
-          # (pipe subshell would lose FAILED variable changes)
-          while read plugin; do
-            if [ -d "$plugin/.claude-plugin" ]; then
-              echo ""
-              echo "--- Validating: $plugin ---"
-
-              if [ -n "$VALIDATOR" ]; then
-                python "$VALIDATOR" "$plugin" --verbose || FAILED=1
-              else
-                # Basic validation without validator script
-                if [ -f "$plugin/.claude-plugin/plugin.json" ]; then
-                  python -c "import json; json.load(open('$plugin/.claude-plugin/plugin.json'))" && echo "✓ $plugin: plugin.json valid"
-                else
-                  echo "✗ $plugin: plugin.json not found"
-                  FAILED=1
-                fi
-              fi
-            else
-              echo "⚠ $plugin: No .claude-plugin directory (skipping)"
-            fi
-          done < <(git submodule foreach --quiet 'echo $name')
-
-          if [ "$FAILED" -ne 0 ]; then
-            echo ""
-            echo "=== Some plugins failed validation ==="
-            exit 1
-          fi
-
-          echo ""
-          echo "=== All plugins validated successfully ==="
+          # Validate all plugin entries have required fields and valid sources
+          python3 -c "
+          import json, sys
+          with open('.claude-plugin/marketplace.json') as f:
+              data = json.load(f)
+          if not data.get('name'):
+              print('FAIL: missing marketplace name')
+              sys.exit(1)
+          plugins = data.get('plugins', [])
+          if not plugins:
+              print('FAIL: no plugins defined')
+              sys.exit(1)
+          for p in plugins:
+              name = p.get('name', '?')
+              if not p.get('name'):
+                  print(f'FAIL: plugin entry missing name')
+                  sys.exit(1)
+              source = p.get('source')
+              if not source:
+                  print(f'FAIL: plugin {name} missing source')
+                  sys.exit(1)
+              if isinstance(source, dict):
+                  if source.get('type') != 'git' or not source.get('repository'):
+                      print(f'FAIL: plugin {name} URL source missing type or repository')
+                      sys.exit(1)
+                  print(f'OK {name}: URL source -> {source[\"repository\"]}')
+              elif isinstance(source, str):
+                  print(f'OK {name}: path source -> {source}')
+              else:
+                  print(f'FAIL: plugin {name} invalid source type')
+                  sys.exit(1)
+          print(f'')
+          print(f'=== All {len(plugins)} plugin entries validated ===')
+          "
 
       - name: Lint marketplace scripts
         run: |
           echo "=== Linting marketplace scripts ==="
           if [ -d "scripts" ]; then
-            ruff check scripts/ --select=E,F,W --ignore=E501 || echo "⚠ Some lint warnings (non-blocking)"
+            ruff check scripts/ --select=E,F,W --ignore=E501 || echo "WARNING Some lint warnings (non-blocking)"
           else
             echo "No scripts/ directory to lint"
           fi
